# pyrotel

./: .gitignore  DEVELOPING.md  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py
.github/: wheels.yml
.github/workflows/: build-release.yml  ci.yml  wheels-linux.yml  wheels-osx.yml  wheels.yml
rotel/: __init__.py
scripts/: build_all.py  build_hook.py  download-agent.sh  download-gh-asset.sh  platform.py
src/rotel/: __about__.py  __init__.py  agent.py  client.py  config.py  error.py
tests/: test_client.py  test_config.py  utils.py  utils_server.py
tests/contrib/: trace_processor.py
tests/data/: rotel_cfg1.py
