[tool.cibuildwheel]
before-all = "uname -a"

[build-system]
requires = ["setuptools >= 74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotel"
version = "0.0.7"
requires-python = ">=3.8"
dynamic = ["description", "readme", "license", "authors", "classifiers", "optional-dependencies"]
